sm/sm-b2b-connector/main/default/objects/DCM_Application_Log__c/DCM_Application_Log__c.object-meta.xml
<CustomObject>
    <label>DCM Application Log</label>
    <nameField>
        <displayFormat>DCM-Log-{000000}</displayFormat>
        <label>DCM Application Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCM Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>