sm/sm-b2b-connector/main/default/objects/DCM_Application_Log__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <label>Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>