sm/sm-b2b-connector/main/default/objects/DCM_Application_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>