sm/sm-b2b-connector/main/default/objects/DCM_Application_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>