sm/sm-b2b-connector/main/default/objects/DCM_Application_Log__c/fields/Link_to_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Record__c</fullName>
    <formula>IF(ISBLANK(Record_Id__c),&apos;No Record Found&apos;,HYPERLINK(&quot;/&quot; &amp; Record_Id__c, &quot;Click here to view&quot;&amp;BR()&amp;&quot;the Record Details&quot;, &apos;_self&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Record</label>
    <type>Text</type>
</CustomField>