sm/sm-b2b-connector/main/default/objects/DCM_Application_Log__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DCM_Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>