sm/sm-b2b-connector/main/default/objects/DCM_Application_Log__c/fields/User_Role_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Profile__c</fullName>
    <formula>&quot;Role : &quot;&amp; Running_User__r.UserRole.Name &amp;BR()&amp; &quot;Profile : &quot;&amp; Running_User__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Role &amp; Profile</label>
    <type>Text</type>
</CustomField>