sm/sm-b2b-connector/main/default/objects/DCM_Application_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Logging_Level__c</columns>
    <columns>Message__c</columns>
    <columns>Method_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Class_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>